hphp/test/slow/clsmeth/elem-unset-notice.php.expectf
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
varray(0) {
}
varray(1) {
  varray(0) {
  }
}
darray(1) {
  [0]=>
  varray(0) {
  }
}
object(P) (1) {
  ["m"]=>
  varray(0) {
  }
}
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
varray(0) {
}
varray(1) {
  varray(0) {
  }
}
darray(1) {
  [0]=>
  varray(0) {
  }
}
object(P) (1) {
  ["m"]=>
  varray(0) {
  }
}
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
varray(0) {
}
varray(1) {
  varray(0) {
  }
}
darray(1) {
  [0]=>
  varray(0) {
  }
}
object(P) (1) {
  ["m"]=>
  varray(0) {
  }
}
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
[NOTICE] Implicit clsmeth to varray conversion
varray(0) {
}
varray(1) {
  varray(0) {
  }
}
darray(1) {
  [0]=>
  varray(0) {
  }
}
object(P) (1) {
  ["m"]=>
  varray(0) {
  }
}
[NOTICE] Implicit clsmeth to varray conversion
varray(2) {
  string(3) "Foo"
  string(3) "bar"
}

Fatal error: Cannot unset string offsets in %s/elem-unset-notice.php on line 53
